<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2023-2024 Maveniverse Org.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v2.0
    which accompanies this distribution, and is available at
    https://www.eclipse.org/legal/epl-v20.html

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.maveniverse.maven.mimir</groupId>
    <artifactId>mimir</artifactId>
    <version>0.6.1-SNAPSHOT</version>
  </parent>

  <artifactId>extension</artifactId>

  <name>${project.groupId}:${project.artifactId}</name>

  <properties>
    <maven.compiler.release>8</maven.compiler.release>
  </properties>

  <dependencies>
    <dependency>
      <groupId>eu.maveniverse.maven.mimir</groupId>
      <artifactId>core</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>eu.maveniverse.maven.mimir.node</groupId>
      <artifactId>daemon</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>eu.maveniverse.maven.mimir.node</groupId>
      <artifactId>file</artifactId>
      <version>${project.version}</version>
    </dependency>

    <dependency>
      <groupId>eu.maveniverse.maven.shared</groupId>
      <artifactId>extension</artifactId>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.inject</groupId>
      <artifactId>javax.inject</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.resolver</groupId>
      <artifactId>maven-resolver-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.resolver</groupId>
      <artifactId>maven-resolver-spi</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.resolver</groupId>
      <artifactId>maven-resolver-util</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven.resolver</groupId>
      <artifactId>maven-resolver-connector-basic</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-core</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
